Fix layout issue with clip calendar clip filter modal.

--- a/vesper/django/app/static/vesper/view/clip-calendar.css
+++ b/vesper/django/app/static/vesper/view/clip-calendar.css
@@ -59,7 +59,11 @@
 .period-rule {
 }
 
-.row {
+/*
+ * This class used to be called just "row", but then it overrode the
+ * Bootstrap "row" class.
+ */
+.period-row {
   margin: 35px 0;
 }
 
